--- a/requirements.txt
+++ b/requirements.txt
@@ -1,346 +1,45 @@
-absl-py==2.0.0
-aiohttp==3.9.5
-aiosignal==1.3.1
-altair==5.4.1
-anyio==4.3.0
-appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-astor==0.8.1
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attr==0.3.1
-attrdict==2.0.1
-attrs==23.2.0
-azure-core==1.30.1
-azure-storage-blob==12.19.1
-Babel==2.14.0
-backcall==0.2.0
-bce-python-sdk==0.9.6
-beautifulsoup4==4.12.3
-bleach==5.0.1
-blinker==1.7.0
-boto==2.49.0
-boto3==1.29.7
-botocore==1.32.7
-boxing==0.1.4
-cachetools==5.3.2
-certifi==2023.7.22
-cffi==1.16.0
-chardet==4.0.0
-charset-normalizer==3.3.2
-click==8.1.7
+altair==5.5.0
+attrs==25.1.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
-colorlog==6.8.2
-comm==0.2.2
-contourpy==1.2.0
-coverage==7.6.1
-cryptography==42.0.5
-cssselect==1.2.0
-cssutils==2.10.2
-cvxopt==1.3.2
-cycler==0.10.0
-Cython==3.0.10
-datasets==2.18.0
-debugpy==1.8.1
-decorator==5.1.1
-deepface==0.0.93
-defusedxml==0.7.1
-dill==0.3.4
-Django==3.2.25
-django-annoying==0.10.6
-django-cors-headers==3.6.0
-django-csp==3.7
-django-debug-toolbar==3.2.1
-django-environ==0.10.0
-django-extensions==3.1.0
-django-filter==2.4.0
-django-model-utils==4.1.1
-django-ranged-fileresponse==0.1.2
-django-rq==2.5.1
-django-storages==1.12.3
-django-user-agents==0.4.0
-djangorestframework==3.13.1
-docopt==0.6.2
-drf-dynamic-fields==0.3.0
-drf-flex-fields==0.9.5
-drf-generators==0.3.0
-easydict==1.13
-et-xmlfile==1.1.0
-executing==2.0.1
-expiringdict==1.2.2
-faiss-cpu==1.8.0
-fastapi==0.110.1
-fastjsonschema==2.20.0
-filelock==3.13.1
-fire==0.5.0
-Flask==3.0.3
-flask-babel==4.0.0
-Flask-Cors==5.0.0
-flatbuffers==24.3.25
-fonttools==4.45.1
-fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2023.10.0
-future==1.0.0
-gast==0.3.3
-gdown==5.2.0
-gitdb==4.0.11
-GitPython==3.1.40
-google-api-core==2.18.0
-google-auth==2.29.0
-google-auth-oauthlib==1.1.0
-google-cloud-core==2.4.1
-google-cloud-storage==2.16.0
-google-crc32c==1.5.0
-google-pasta==0.2.0
-google-resumable-media==2.7.0
-googleapis-common-protos==1.63.0
-grpcio==1.59.3
-gunicorn==23.0.0
-h11==0.14.0
-h5py==3.11.0
-htmlmin==0.1.12
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.19.4
-humansignal-drf-yasg==1.21.9
-idna==2.10
-ijson==3.2.3
-image==1.5.33
-imageio==2.34.0
-imgaug==0.4.0
-infer==0.1
-inflection==0.5.1
-iniconfig==2.0.0
-ipykernel==6.29.4
-ipython==8.12.3
-ipythonblocks==1.9.1
-ipywidgets==8.1.5
-isodate==0.6.1
-isoduration==20.11.0
-itsdangerous==2.1.2
-jax==0.4.35
-jaxlib==0.4.35
-jedi==0.19.1
-jieba==0.42.1
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.9.25
-jsonpointer==3.0.0
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.56.0
+gitdb==4.0.12
+GitPython==3.1.44
+idna==3.10
+Jinja2==3.1.6
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter==1.1.0
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-keras==3.5.0
-kiwisolver==1.4.5
-label-studio==1.11.0
-label-studio-converter==0.0.57
-label-studio-tools==0.0.3
-launchdarkly-server-sdk==7.5.0
-lazy_loader==0.4
-libclang==18.1.1
-lmdb==1.4.1
-lockfile==0.12.2
-lxml==5.2.1
-lz4==4.3.3
-Markdown==3.5.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mediapipe==0.10.14
-mistune==3.0.2
-ml-dtypes==0.4.0
-mpmath==1.3.0
-mtcnn==1.0.0
-multidict==6.0.5
-multiprocess==0.70.12.2
-namex==0.0.8
-narwhals==1.10.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.2.1
-nltk==3.6.7
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==1.26.2
-oauthlib==3.2.2
-onnx==1.16.0
-opencv-contrib-python==4.6.0.66
-opencv-contrib-python-headless==4.8.1.78
-opencv-python==4.6.0.66
-opencv-python-headless==4.8.0.74
-openpyxl==3.1.2
-opt-einsum==3.3.0
-optree==0.12.1
-ordered-set==4.0.2
-overrides==7.7.0
-packaging==23.2
-paddle2onnx==0.8.1
-paddleclas==2.5.2
-paddlefsl==1.1.0
-paddlenlp==2.6.1
-paddleocr==2.7.3
-paddlepaddle==2.6.1
-pandas==2.1.3
-pandocfilters==1.5.1
-parso==0.8.4
-pdf2docx==0.5.8
-pickleshare==0.7.5
-Pillow==10.1.0
-pipreqs==0.5.0
-platformdirs==4.2.0
-pluggy==1.5.0
-premailer==3.10.0
-prettytable==3.10.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
-proto-plus==1.23.0
-protobuf==4.25.4
-psutil==5.9.6
-psycopg2-binary==2.9.6
-pure-eval==0.2.2
-py-cpuinfo==9.0.0
-pyarrow==15.0.2
-pyarrow-hotfix==0.6
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pybboxes==0.1.6
-pyclipper==1.3.0.post5
-pycparser==2.22
-pycryptodome==3.20.0
-pydantic==1.10.15
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+narwhals==1.29.1
+numpy==2.2.3
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+protobuf==5.29.3
+pyarrow==19.0.1
 pydeck==0.9.1
-Pygments==2.17.2
-PyMuPDF==1.24.1
-PyMuPDFb==1.24.1
-pyparsing==2.4.7
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.13.0
-pyRFC3339==1.1
-pyrsistent==0.20.0
-PySocks==1.7.1
-pytest==8.3.2
-pytest-cov==5.0.0
-python-dateutil==2.8.2
-python-docx==1.1.0
-python-dotenv==1.0.0
-python-json-logger==2.0.4
-python-magic==0.4.27
-pytils==0.4.1
-pytz==2022.7.1
-pywin32==306
-pywinpty==2.0.13
-PyYAML==6.0.1
-pyzmq==26.0.0
-qpsolvers==4.3.3
-rapidfuzz==3.8.1
-rarfile==4.2
-redis==3.5.3
-referencing==0.35.1
-regex==2023.12.25
-requests==2.31.0
-requests-oauthlib==1.3.1
-requests-toolbelt==1.0.0
-retina-face==0.0.17
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-roboflow==1.1.9
-rpds-py==0.20.0
-rq==1.10.1
-rsa==4.9
-rules==2.2
-s3transfer==0.8.0
-safetensors==0.4.3
-sahi==0.11.15
-Sastrawi==1.0.1
-scikit-image==0.23.1
-scikit-learn==1.4.2
-scipy==1.11.4
-seaborn==0.13.0
-semver==2.13.0
-Send2Trash==1.8.3
-sentencepiece==0.2.0
-sentry-sdk==1.45.0
-seqeval==1.2.2
-shapely==2.0.2
-shellingham==1.5.4
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sounddevice==0.5.1
-soupsieve==2.5
-sqlparse==0.5.0
-stack-data==0.6.3
-starlette==0.37.2
-streamlit==1.39.0
-supervision==0.16.0
-sympy==1.12
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.23.1
+seaborn==0.13.2
+six==1.17.0
+smmap==5.0.2
+streamlit==1.43.1
 tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow_intel==2.18.0
-termcolor==2.3.0
-terminado==0.18.1
-terminaltables==3.1.10
-tf_keras==2.18.0
-thop==0.1.1.post2209072238
-threadpoolctl==3.4.0
-tifffile==2024.2.12
-tinycss2==1.3.0
 toml==0.10.2
-tools==0.1.9
-torch==2.1.1
-torchvision==0.16.1
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.2
-typer==0.12.3
-types-python-dateutil==2.9.0.20240821
+tornado==6.4.2
 typing_extensions==4.12.2
-tzdata==2023.3
-ua-parser==0.18.0
-ujson==5.9.0
-ultralytics==8.1.11
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==1.26.18
-user-agents==2.2.0
-uvicorn==0.29.0
-visualdl==2.5.3
-watchdog==5.0.3
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==3.0.1
-widgetsnbextension==4.0.13
-wrapt==1.16.0
-xmljson==0.2.0
-xxhash==3.4.1
-yarg==0.1.9
-yarl==1.9.4
-yolov5==7.0.13
+tzdata==2025.1
+urllib3==2.3.0
+watchdog==6.0.0
